Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12760,7 +12760,7 @@ figcaption {
 }
 
 .slide .skill-share-inner .skill-share li {
-    margin: 10px 12px;
+    margin: 10px;
     line-height: 55px;
     display: inline-block;
     width: 60px;
@@ -12776,7 +12776,7 @@ figcaption {
 }
 
 .slide .skill-share-inner .skill-share li img {
-    max-height: 23px;
+    max-height: 27px;
     width: auto;
 }
 
